# MCP_College_Basketball

./: .env.example  .gitignore  .stitch-project.json  CBB_ML_Exploration.ipynb  CONTEXTUAL_FEATURES_SUMMARY.txt  Dockerfile  Dockerfile.dashboard  Dockerfile.railway  FEATURE_DATA_SOURCES.md  FEATURE_ENGINEERING_QUICK_START.md  GAME_TIME_TRACKING.md  GET_CONTEXTUAL_FEATURES_CHECKLIST.md  IMPLEMENTATION_COMPLETE.md  LICENSE  MCP_TEST_RESULTS.md  ML_MODEL_AUDIT_2025_26.md  ML_SERVER_IMPLEMENTATION_SUMMARY.md  ML_SERVER_MIGRATION.md  MODEL_FEATURE_LIMITATIONS.md  MODEL_VALIDATION_REPORT.md  PREDICTOR_GUIDE.md  README.md  RETRAINING_SUMMARY.md  TRAINING_OVERVIEW.txt  VARIABLES_CHEATSHEET.md  WIN_PROBABILITY_VISUALIZATION.md  WIN_PROB_IMPROVEMENTS_SUMMARY.md  agents.md  cbb_predictor_bundle.joblib  cbb_predictor_bundle_2025_26_safe.joblib  collect_fast_2025_26.py  collect_real_2025_26_data.py  collection_log.txt  concat_list.txt  create_demo_video.py  demo_concat.txt  docker-compose-dev.yml  docker-compose.prod.yml  docker-compose.yml  enhance_with_contextual_features.py  (+12 more)
Linkedin/: combine_list.txt  final_concat.txt  final_merge.txt  merge.txt  video_list.txt
Video/: concat.txt
dashboard/: app.py  layout.py  utils.py
dashboard/ai/: agent.py  mcp_client.py  ml_mcp_client.py  predictor.py  predictor_client.py  tools.py
dashboard/assets/: styles.css
dashboard/callbacks/: chat_callbacks.py  game_callbacks.py  map_callbacks.py  rankings_callbacks.py
dashboard/components/: chat_panel.py  game_panel.py  map_view.py  rankings_sidebar.py
dashboard/config/: rate_limits.py
dashboard/data/: geocoder.py  venue_coordinates.py
dashboard/scripts/: build_contextual_features_2025_26.py  build_venue_coords.py  collect_historical_data.py  evaluate_predictor.py  feature_engineering.py  leakage_safe_features.py  train_predictor.py
dashboard/utils/: __init__.py  rate_limiter.py
src/cbb_mcp/: __init__.py  config.py  predictor_server.py  server.py
src/cbb_mcp/models/: common.py  games.py  rankings.py  stats.py  teams.py
src/cbb_mcp/services/: games.py  rankings.py  resolver.py  stats.py  teams.py
src/cbb_mcp/sources/: base.py  cbbpy_source.py  espn.py  ncaa.py  sportsdataverse.py
src/cbb_mcp/utils/: cache.py  constants.py  errors.py  formatting.py  http_client.py  rate_limiter.py
src/ml_sports_predictor/: __init__.py  config.py  errors.py  formatting.py  predictor.py  server.py  sports_config.yaml
tests/: conftest.py  test_cache.py  test_dashboard_predictor.py  test_espn.py  test_formatting.py  test_live_probability_stabilization.py  test_ncaa.py  test_resolver.py  test_server.py
tests/ml_sports_predictor/: __init__.py  test_config.py  test_formatting.py  test_integration.py  test_predictor.py  test_server.py
